--- a/.github/workflows/build-telegram.yml
+++ b/.github/workflows/build-telegram.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v5
         with:
-          distribution: 'adopt'
+          distribution: 'temurin'
           java-version: '21'
 
       - name: Create module list
