--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,17 +16,14 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Configure Git
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-
       - name: Merge dev into main
         run: |
-          if [ "${{ github.event.inputs.confirm }}" != "yes" ]; then
-            echo "Confirmation not provided, aborting merge."
-            exit 1
+          if [[ "${{ github.event.inputs.confirm }}" != "yes" ]]; then
+            echo "Confirmation not provided, aborting merge."; exit 1
           fi
           git checkout main
           git merge --no-ff origin/dev
