--- a/.github/workflows/Check-releases.yml
+++ b/.github/workflows/Check-releases.yml
@@ -17,9 +17,8 @@ jobs:
 
       - name: Create File if Not Exist
         run: |
-          if [ ! -f "all_releases.txt" ]; then
-            touch all_releases.txt
-            echo "File created"
+          if [[ ! -f "all_releases.txt" ]]; then
+            touch all_releases.txt; echo "File created"
           fi
 
       - name: Download AAPT Tool
@@ -32,21 +31,18 @@ jobs:
       - name: Download Telegram Client
         run: curl -L -o telegram.apk https://telegram.org/dl/android/apk
         shell: bash
-
       - name: Download ForkGram Client
         uses: robinraju/release-downloader@v1
         with:
           fileName: "ForkClient*.apk"
           repository: forkgram/TelegramAndroid
           latest: true
-
       - name: Download TelegramFOSS Client
         uses: robinraju/release-downloader@v1
         with:
           fileName: "TF*.apk"
           repository: Telegram-FOSS-Team/Telegram-FOSS
           latest: true
-
       - name: Check for New Client Releases
         id: check-client-releases
         run: |
@@ -63,7 +59,7 @@ jobs:
           echo "Current Telegram Version: $CURRENT_TG_VERSION"
           if grep -q "^Telegram: " all_releases.txt; then
             EXISTING_TG_VERSION=$(grep "^Telegram: " all_releases.txt | cut -d ' ' -f 2-)
-            if [ "$EXISTING_TG_VERSION" != "$CURRENT_TG_VERSION" ]; then
+            if [[ "$EXISTING_TG_VERSION" != "$CURRENT_TG_VERSION" ]]; then
               sed -i "s|^Telegram: .*|Telegram: $CURRENT_TG_VERSION|" all_releases.txt
               RELEASES_FOUND=true
             fi
@@ -80,7 +76,7 @@ jobs:
           echo "Current ForkGram Version: $CURRENT_FORK_VERSION"
           if grep -q "^ForkGram: " all_releases.txt; then
             EXISTING_FORK_VERSION=$(grep "^ForkGram: " all_releases.txt | cut -d ' ' -f 2-)
-            if [ "$EXISTING_FORK_VERSION" != "$CURRENT_FORK_VERSION" ]; then
+            if [[ "$EXISTING_FORK_VERSION" != "$CURRENT_FORK_VERSION" ]]; then
               sed -i "s|^ForkGram: .*|ForkGram: $CURRENT_FORK_VERSION|" all_releases.txt
               RELEASES_FOUND=true
             fi
@@ -97,7 +93,7 @@ jobs:
           echo "Current TelegramFOSS Version: $CURRENT_TGFOSS_VERSION"
           if grep -q "^TelegramFOSS: " all_releases.txt; then
             EXISTING_TGFOSS_VERSION=$(grep "^TelegramFOSS: " all_releases.txt | cut -d ' ' -f 2-)
-            if [ "$EXISTING_TGFOSS_VERSION" != "$CURRENT_TGFOSS_VERSION" ]; then
+            if [[ "$EXISTING_TGFOSS_VERSION" != "$CURRENT_TGFOSS_VERSION" ]]; then
               sed -i "s|^TelegramFOSS: .*|TelegramFOSS: $CURRENT_TGFOSS_VERSION|" all_releases.txt
               RELEASES_FOUND=true
             fi
@@ -118,13 +114,13 @@ jobs:
             fi
             TAG_NAME=$(echo "$LATEST_RELEASE" | jq -r '.tag_name')
             REPO_NAME=$(echo "$REPO" | cut -d '/' -f 2) # Extract repo name for file storage
-            if [ -z "$TAG_NAME" ]; then
+            if [[ -z "$TAG_NAME" ]]; then
               echo "No releases found for $REPO"
             else
               echo "Current $REPO_NAME Tag: $TAG_NAME"
               if grep -q "^$REPO_NAME: " all_releases.txt; then
                 EXISTING_TAG=$(grep "^$REPO_NAME: " all_releases.txt | cut -d ' ' -f 2)
-                if [ "$EXISTING_TAG" != "$TAG_NAME" ]; then
+                if [[ "$EXISTING_TAG" != "$TAG_NAME" ]]; then
                   sed -i "s|^$REPO_NAME: .*|$REPO_NAME: $TAG_NAME|" all_releases.txt
                   RELEASES_FOUND=true
                 fi
@@ -135,13 +131,12 @@ jobs:
             fi
           done
 
-          if [ "$RELEASES_FOUND" = true ]; then
+          if [[ "$RELEASES_FOUND" = true ]]; then
             git config --global user.email "action@github.com"
             git config --global user.name "GitHub Action"
             git add all_releases.txt
             git commit -m "Update client and module versions in all_releases.txt"
             git push
-
             curl -X POST \
               -H "Accept: application/vnd.github.v3+json" \
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
